# lab2307_WS1314_tama

./: .gitignore
data/: generate-sequences.sh
data/models/: cleanobj.awk  cube.py
main/: CMakeLists.txt  main.cpp  main.py
synth/: CMakeLists.txt  synth.cpp  viz.cpp
